<resources>

    <string name="app_name">IMD Calculator</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="imd_calculator">Calculadora IMD</string>
    <string name="calculator">Calculadora</string>
    <string name="grades">Notas</string>

    <!-- SIMPLE CALCULATOR -->
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="times">*</string>
    <string name="divide">/</string>
    <string name="equals">=</string>
    <string name="delete">Delete</string>
    <string name="result">Resultado:</string>

    <!-- ACADEMIC CALCULATOR -->
    <string name="grade1">Nota da unidade 1</string>
    <string name="grade2">Nota da unidade 2</string>
    <string name="grade3">Nota da unidade 3</string>
    <string name="situation">Situação:</string>
    <string name="calculate">Calcular</string>

    <string name="developedBy">Desenvolvido por: João Pedro Fonseca Dantas</string>

</resources>